# COMP208

./: .gitignore  CMakeLists.txt  DumpDB.java  Instructions.md  build.gradle  client.bat  client.sh  clientGradle.bat  clientV2.bat  compile.bat  compile.sh  copy-assets.ps1  copyright.md  gradle.properties  gradlew.bat  readme.md  runClientGradle.bat  server.bat  server.sh  settings.gradle  setup.bat  setup.sh
Backend/: AI.cpp  AI.h  main  main.cpp  main.h  timing.txt
Backend/Server/: main.java  mainmenu.css
Backend/main.dSYM/Contents/Resources/DWARF/: main
Bailies-Testing/: CMakeLists.txt  README.MD  main.cpp
DB/: main.db
Debug-Tools/: batchErrorDetection.py  l2_batch_by_difficulty.py  l2_from_csv.py  profiler.ps1  read_main_db.py  viewAI.py  viewdata.py
Fin_Stuff/: Cycle_two_map.mapss.tiled-project.tmx  Cycle_two_map.tmj  Cycle_two_maps.tiled-session  GameObject.java  GameTest.java  Initial_Cycle_Two_Test.tiled-session  Player.java  loginmenu.fxml  main.java  master_tileset.tsx
Fin_Stuff/Cycle_two_testing/: Initial_Cycle_Two_Test.tiled-session
Fin_Stuff/Cycle_two_testing/assets/: City Tiles.tsx  Modern_Interiors.tsx  inside_skyscraper.json  testing_map_v1.json  testing_map_v1.tmx
Logs/: BASELINE_DATA.txt  batch_error_20260224-164049.txt  batch_error_20260224-164213.txt  batch_error_20260224-165949.txt  batch_error_20260224-170720.txt  batch_error_20260224-181945.txt  batch_error_20260224-182119.txt  batch_error_20260224-182232.txt  batch_error_20260224-182348.txt  l2_error_20260224-163252.txt  l2_error_20260224-163352.txt  l2_error_20260224-163405.txt  l2_error_20260224-163419.txt  l2_error_20260224-163635.txt  l2_error_20260224-171042.txt  l2_error_20260224-171115.txt  l2_error_20260227-115146.txt  profiler_log_20260224-160817.txt  profiler_log_20260224-160926.txt  profiler_log_20260224-161104.txt  profiler_log_20260224-170521.txt  profiler_log_20260224-182813.txt  profiler_log_20260224-182856.txt  profiler_log_20260224-183101.txt
Sarinas-Testing/: .gitignore  README.md
Sarinas-Testing/monte_carlo/: README.md  analysis.py  edge_cases.py  plots.py  run_mc.py
Server/: ClientState.java  DBHandler.java  ServerController.java  cycle1.java  main.java
Server/Cycles/: CycleEngine.java  CycleOneEngine.java  CycleTwoEngine.java
Server/Tools/: AuthService.java  DBManager.java
client/: COMP208GameUI.fxml  client.java  loginmenu.fxml  readme.md  runV1.ps1
client/Assets/: COMP208GameUI.fxml  Cycle2Game.fxml  Cycle2Placeholder.fxml  GameUI.css  MainMenu.fxml  loginmenu.fxml
client/Auth/: LoginController.java
client/Fin_Stuff/: GameObject.java  GameTest.java  Player.java
client/Fin_Stuff/Cycle_two_testing/assets/: Cycle_two_map.json  Room_Builder_free_16x16.tsx  inside_skyscraper.tmx
client/Screens/: Cycle2Controller.java  Cycle2GameController.java  GameUIController.java  MainMenuController.java
client/clientv1/: Client.java  configs.json  readme.md
client/serverSimulator/: serverSimulation.py
legacy/: readme.md  runV1.ps1
legacy/clientv1/: Client.java  readme.md
legacy/old/Server/: Cycle1UI.java  cycle1.java
legacy/serverSimulator/: readme.md  serverSimulation.py
legacy/testPortCSV/: CsvSocketReceiver.java  csv_sender.py
